nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: tttnp
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.14.2
          ports:
            - containerPort: 80
