second-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: client
  namespace: tttnp
  labels:
    app: client
spec:
  containers:
  - name: busybox
    image: radial/busyboxplus:curl
    command: ['sh', '-c', 'while true; do curl -m 3 192.168.126.1; sleep 5; done']
